CSS Fixes & made #desktop-relative enabled on mobile

--- a/less/uams.mobile-menu.less
+++ b/less/uams.mobile-menu.less
@@ -29,7 +29,7 @@
 
   //Hides desktop version
   #desktop-relative {
-    display: none;
+    /* display: none; */
   }
 
   //Moves mobile menu above the hero.
